packages/svelte/tests/validator/samples/svelte-ignore-bindable-prop-not-mutated/input.svelte
<script>
	// svelte-ignore bindable_prop_not_mutated
	let { foo = $bindable() } = $props();
</script>

<p>{foo}</p>
