packages/svelte/tests/compiler-errors/samples/attribute-sequence-expression-2/main.svelte
<script>
	let { x, y, z } = $props();
</script>

<!-- allowed -->
<span foo={(x, y, z)} />

<!-- not allowed -->
<span foo={x, y, z} />
